--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build export SET NODE_OPTIONS=--openssl-legacy-provider",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "deploy": "ng b --prod --base-href https://zinedineBenkhider.github.io/portfolio/ && npx ngh --dir=dist/my-portfolio"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
