--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build export SET NODE_OPTIONS=--openssl-legacy-provider",
+    "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
-  },
+    },
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.0.1",
