--- a/angular.json
+++ b/angular.json
@@ -29,11 +29,14 @@
             ],
             "styles": [
               "src/custom-theme.scss",
+              "node_modules/bootstrap/dist/css/bootstrap.css",
               "node_modules/aos/dist/aos.css",
               "node_modules/font-awesome/css/font-awesome.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ]
           },
           "configurations": {
             "production": {
